fixing nav-bar and side-bar overlap

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -59,6 +59,8 @@ img {
     flex-direction: row;
     position: fixed;
     width: 100%;
+    height: 46px;
+    z-index: 1;
 }
 
 .nav-tile {
@@ -101,7 +103,6 @@ img {
     justify-content: space-around;
     background-color: #2f2f2f;
     box-shadow: 4px 4px 8px #000;
-    z-index: 1;
     width: 100%;
     position: absolute;
     left: 0;
@@ -177,7 +178,7 @@ button[type="submit"]:hover {
     width: 100%;
     height: 100%;
     background-color: #212121;
-    margin-top: 45px;
+    margin-top: 46px;
 }
 
 .side-nav {
